{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 962,
  "lineage": "4ae985da-b572-850d-b1d5-53de957fa191",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "mpc001",
      "provider": "provider.aws.us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-08b2f8f732b7171e6",
            "domain": "vpc",
            "id": "eipalloc-0dfcf7f7ea5046747",
            "instance": "i-0a1375827cb32731c",
            "network_interface": "eni-028c25c414793cdc9",
            "private_dns": "ip-172-31-33-101.ec2.internal",
            "private_ip": "172.31.33.101",
            "public_dns": "ec2-54-163-165-194.compute-1.amazonaws.com",
            "public_ip": "54.163.165.194",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.mpc001",
            "aws_security_group.us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "mpc002",
      "provider": "provider.aws.us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0bdd5d755cac55d9a",
            "domain": "vpc",
            "id": "eipalloc-08fc2b0b5ab91b116",
            "instance": "i-022c1d000a78c308a",
            "network_interface": "eni-0499e80256a5e8d10",
            "private_dns": "ip-172-31-5-71.us-east-2.compute.internal",
            "private_ip": "172.31.5.71",
            "public_dns": "ec2-3-132-3-41.us-east-2.compute.amazonaws.com",
            "public_ip": "3.132.3.41",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.mpc002",
            "aws_security_group.us-east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "mpc003",
      "provider": "provider.aws.us-west-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-02f16f2980ed8546a",
            "domain": "vpc",
            "id": "eipalloc-060896463c2da6f42",
            "instance": "i-03362ec0c662d84ac",
            "network_interface": "eni-071ccfdd7c9395414",
            "private_dns": "ip-172-31-5-206.us-west-1.compute.internal",
            "private_ip": "172.31.5.206",
            "public_dns": "ec2-13-56-73-80.us-west-1.compute.amazonaws.com",
            "public_ip": "13.56.73.80",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.mpc003",
            "aws_security_group.us-west-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "mpc004",
      "provider": "provider.aws.us-west-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-03e5f32d87954ae23",
            "domain": "vpc",
            "id": "eipalloc-050f109b18e8e626e",
            "instance": "i-01132c2efad416663",
            "network_interface": "eni-0e50a90895af28411",
            "private_dns": "ip-172-31-31-24.us-west-2.compute.internal",
            "private_ip": "172.31.31.24",
            "public_dns": "ec2-54-70-103-229.us-west-2.compute.amazonaws.com",
            "public_ip": "54.70.103.229",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.mpc004",
            "aws_security_group.us-west-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "mpc005",
      "provider": "provider.aws.sa-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-093944cc86946447e",
            "domain": "vpc",
            "id": "eipalloc-029f175050bbdc642",
            "instance": "i-0392240f70d7c4453",
            "network_interface": "eni-0e8e6a49a004f757c",
            "private_dns": "ip-172-31-5-33.sa-east-1.compute.internal",
            "private_ip": "172.31.5.33",
            "public_dns": "ec2-54-94-1-202.sa-east-1.compute.amazonaws.com",
            "public_ip": "54.94.1.202",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.mpc005",
            "aws_security_group.sa-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "mpc006",
      "provider": "provider.aws.me-south-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0c419f931290c9a01",
            "domain": "vpc",
            "id": "eipalloc-06dffd05f49299522",
            "instance": "i-0929e11ef518523da",
            "network_interface": "eni-09e34cb5fc7daad6c",
            "private_dns": "ip-172-31-3-155.me-south-1.compute.internal",
            "private_ip": "172.31.3.155",
            "public_dns": "ec2-15-184-46-158.me-south-1.compute.amazonaws.com",
            "public_ip": "15.184.46.158",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.mpc006",
            "aws_security_group.me-south-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "mpc007",
      "provider": "provider.aws.eu-central-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-09f81daefc833c6ba",
            "domain": "vpc",
            "id": "eipalloc-021877389bb9dadda",
            "instance": "i-085082e8d09cece76",
            "network_interface": "eni-0ddeeb4dbca783bbf",
            "private_dns": "ip-172-31-16-239.eu-central-1.compute.internal",
            "private_ip": "172.31.16.239",
            "public_dns": "ec2-18-157-95-249.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.157.95.249",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.mpc007",
            "aws_security_group.eu-central-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "mpc008",
      "provider": "provider.aws.eu-north-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0e01b1fbc5db322fb",
            "domain": "vpc",
            "id": "eipalloc-0b2063c569262b2b1",
            "instance": "i-08af7d1c96c28d09e",
            "network_interface": "eni-033ed3a948da3cad0",
            "private_dns": "ip-172-31-30-107.eu-north-1.compute.internal",
            "private_ip": "172.31.30.107",
            "public_dns": "ec2-13-48-150-27.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.48.150.27",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.mpc008",
            "aws_security_group.eu-north-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mpc001",
      "provider": "provider.aws.us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0885b1f6bd170450c",
            "arn": "arn:aws:ec2:us-east-1:627588749323:instance/i-0a1375827cb32731c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a1375827cb32731c",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "dstarin_aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-028c25c414793cdc9",
            "private_dns": "ip-172-31-33-101.ec2.internal",
            "private_ip": "172.31.33.101",
            "public_dns": "ec2-3-94-128-137.compute-1.amazonaws.com",
            "public_ip": "3.94.128.137",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04d5389fc32b36676",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "us-east-1-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-f50718dd",
            "tags": {
              "Name": "mpc001"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e04d3ca8417545f2"
            ]
          },
          "dependencies": [
            "aws_security_group.us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mpc002",
      "provider": "provider.aws.us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a91cd140a1fc148a",
            "arn": "arn:aws:ec2:us-east-2:627588749323:instance/i-022c1d000a78c308a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-022c1d000a78c308a",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "dstarin_aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0499e80256a5e8d10",
            "private_dns": "ip-172-31-5-71.us-east-2.compute.internal",
            "private_ip": "172.31.5.71",
            "public_dns": "ec2-3-138-179-207.us-east-2.compute.amazonaws.com",
            "public_ip": "3.138.179.207",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b75588f9bdd57ae1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "us-east-2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-f6f2179e",
            "tags": {
              "Name": "mpc002"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06fee606af9623779"
            ]
          },
          "dependencies": [
            "aws_security_group.us-east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mpc003",
      "provider": "provider.aws.us-west-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00831fc7c1e3ddc60",
            "arn": "arn:aws:ec2:us-west-1:627588749323:instance/i-03362ec0c662d84ac",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03362ec0c662d84ac",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "dstarin_aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-071ccfdd7c9395414",
            "private_dns": "ip-172-31-5-206.us-west-1.compute.internal",
            "private_ip": "172.31.5.206",
            "public_dns": "ec2-18-144-161-186.us-west-1.compute.amazonaws.com",
            "public_ip": "18.144.161.186",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c026d5cf71a46254",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "us-west-1-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-7832c623",
            "tags": {
              "Name": "mpc003"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-059541a4b6ce0592e"
            ]
          },
          "dependencies": [
            "aws_security_group.us-west-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mpc004",
      "provider": "provider.aws.us-west-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07dd19a7900a1f049",
            "arn": "arn:aws:ec2:us-west-2:627588749323:instance/i-01132c2efad416663",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01132c2efad416663",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "dstarin_aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e50a90895af28411",
            "private_dns": "ip-172-31-31-24.us-west-2.compute.internal",
            "private_ip": "172.31.31.24",
            "public_dns": "ec2-34-221-21-72.us-west-2.compute.amazonaws.com",
            "public_ip": "34.221.21.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01186029a22ad3e6d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "us-west-2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-52db2e25",
            "tags": {
              "Name": "mpc004"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0105206355b41f604"
            ]
          },
          "dependencies": [
            "aws_security_group.us-west-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mpc005",
      "provider": "provider.aws.sa-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c3c87b7d583d618f",
            "arn": "arn:aws:ec2:sa-east-1:627588749323:instance/i-0392240f70d7c4453",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0392240f70d7c4453",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "dstarin_aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e8e6a49a004f757c",
            "private_dns": "ip-172-31-5-33.sa-east-1.compute.internal",
            "private_ip": "172.31.5.33",
            "public_dns": "ec2-18-230-199-21.sa-east-1.compute.amazonaws.com",
            "public_ip": "18.230.199.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08f9d48978aa581db",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sa-east-1-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-d7e16fb0",
            "tags": {
              "Name": "mpc005"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f8227b4b3dbd7141"
            ]
          },
          "dependencies": [
            "aws_security_group.sa-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mpc006",
      "provider": "provider.aws.me-south-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0394d2ceb736ed2c6",
            "arn": "arn:aws:ec2:me-south-1:627588749323:instance/i-0929e11ef518523da",
            "associate_public_ip_address": true,
            "availability_zone": "me-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0929e11ef518523da",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "dstarin_aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09e34cb5fc7daad6c",
            "private_dns": "ip-172-31-3-155.me-south-1.compute.internal",
            "private_ip": "172.31.3.155",
            "public_dns": "ec2-15-185-225-237.me-south-1.compute.amazonaws.com",
            "public_ip": "15.185.225.237",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08d78548c21764e04",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "me-south-1-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-3726c55e",
            "tags": {
              "Name": "mpc006"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02b9e8a467c7bd07d"
            ]
          },
          "dependencies": [
            "aws_security_group.me-south-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mpc007",
      "provider": "provider.aws.eu-central-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0502e817a62226e03",
            "arn": "arn:aws:ec2:eu-central-1:627588749323:instance/i-085082e8d09cece76",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-085082e8d09cece76",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "dstarin_aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ddeeb4dbca783bbf",
            "private_dns": "ip-172-31-16-239.eu-central-1.compute.internal",
            "private_ip": "172.31.16.239",
            "public_dns": "ec2-3-122-51-40.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.122.51.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-09675d76780a4db57",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "eu-central-1-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-169b437d",
            "tags": {
              "Name": "mpc007"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0250e67a63c978fa0"
            ]
          },
          "dependencies": [
            "aws_security_group.eu-central-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mpc008",
      "provider": "provider.aws.eu-north-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a3a4169ad7cb0d77",
            "arn": "arn:aws:ec2:eu-north-1:627588749323:instance/i-08af7d1c96c28d09e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08af7d1c96c28d09e",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "dstarin_aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-033ed3a948da3cad0",
            "private_dns": "ip-172-31-30-107.eu-north-1.compute.internal",
            "private_ip": "172.31.30.107",
            "public_dns": "ec2-13-53-87-111.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.53.87.111",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03713e6e040a06422",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "eu-north-1-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-5da35b34",
            "tags": {
              "Name": "mpc008"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bc3b0d1bfd60171c"
            ]
          },
          "dependencies": [
            "aws_security_group.eu-north-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "af-south-1",
      "provider": "provider.aws.af-south-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:627588749323:security-group/sg-08dec304cddd6c821",
            "description": "Allow all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08dec304cddd6c821",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "af-south-1-sg",
            "name_prefix": null,
            "owner_id": "627588749323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "af-south-1-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-bf1ff9d6"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ap-east-1",
      "provider": "provider.aws.ap-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:627588749323:security-group/sg-0dbf7f9e3c2ebabd7",
            "description": "Allow all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dbf7f9e3c2ebabd7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ap-east-1-sg",
            "name_prefix": null,
            "owner_id": "627588749323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ap-east-1-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-45cc2e2c"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ap-northeast-1",
      "provider": "provider.aws.ap-northeast-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:627588749323:security-group/sg-0537423e3243e3ff4",
            "description": "Allow all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0537423e3243e3ff4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ap-northeast-1-sg",
            "name_prefix": null,
            "owner_id": "627588749323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ap-northeast-1-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-ae5cabcb"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ap-northeast-2",
      "provider": "provider.aws.ap-northeast-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:627588749323:security-group/sg-0efe5c9edeb68f4d9",
            "description": "Allow all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0efe5c9edeb68f4d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ap-northeast-2-sg",
            "name_prefix": null,
            "owner_id": "627588749323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ap-northeast-2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-1c923774"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ap-south-1",
      "provider": "provider.aws.ap-south-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:627588749323:security-group/sg-09215a12c1b6c11f3",
            "description": "Allow all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09215a12c1b6c11f3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ap-south-1-sg",
            "name_prefix": null,
            "owner_id": "627588749323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ap-south-1-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-6d041c04"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ap-southeast-1",
      "provider": "provider.aws.ap-southeast-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:627588749323:security-group/sg-04ff215d9a810b629",
            "description": "Allow all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04ff215d9a810b629",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ap-southeast-1-sg",
            "name_prefix": null,
            "owner_id": "627588749323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ap-southeast-1-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01eaf265"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ap-southeast-2",
      "provider": "provider.aws.ap-southeast-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:627588749323:security-group/sg-0a32e39ad2c07d707",
            "description": "Allow all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a32e39ad2c07d707",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ap-southeast-2-sg",
            "name_prefix": null,
            "owner_id": "627588749323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ap-southeast-2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-ea25248e"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ca-central-1",
      "provider": "provider.aws.ca-central-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:627588749323:security-group/sg-0f64dc6faccdefca9",
            "description": "Allow all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f64dc6faccdefca9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ca-central-1-sg",
            "name_prefix": null,
            "owner_id": "627588749323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ca-central-1-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-4e227527"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eu-central-1",
      "provider": "provider.aws.eu-central-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:627588749323:security-group/sg-0250e67a63c978fa0",
            "description": "Allow all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0250e67a63c978fa0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "eu-central-1-sg",
            "name_prefix": null,
            "owner_id": "627588749323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eu-central-1-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-6f888207"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eu-north-1",
      "provider": "provider.aws.eu-north-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:627588749323:security-group/sg-0bc3b0d1bfd60171c",
            "description": "Allow all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bc3b0d1bfd60171c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "eu-north-1-sg",
            "name_prefix": null,
            "owner_id": "627588749323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eu-north-1-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-aadd26c3"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eu-south-1",
      "provider": "provider.aws.eu-south-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:627588749323:security-group/sg-07b23087c591c4ec7",
            "description": "Allow all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07b23087c591c4ec7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "eu-south-1-sg",
            "name_prefix": null,
            "owner_id": "627588749323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eu-south-1-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-fa0fee93"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eu-west-1",
      "provider": "provider.aws.eu-west-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:627588749323:security-group/sg-0159337a1e829e4e2",
            "description": "Allow all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0159337a1e829e4e2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "eu-west-1-sg",
            "name_prefix": null,
            "owner_id": "627588749323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eu-west-1-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-ede4c08a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eu-west-2",
      "provider": "provider.aws.eu-west-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:627588749323:security-group/sg-0f7273c274529fb47",
            "description": "Allow all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f7273c274529fb47",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "eu-west-2-sg",
            "name_prefix": null,
            "owner_id": "627588749323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eu-west-2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-e622708f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eu-west-3",
      "provider": "provider.aws.eu-west-3",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:627588749323:security-group/sg-06658cd94671c234e",
            "description": "Allow all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06658cd94671c234e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "eu-west-3-sg",
            "name_prefix": null,
            "owner_id": "627588749323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eu-west-3-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-acedb2c5"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "me-south-1",
      "provider": "provider.aws.me-south-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-south-1:627588749323:security-group/sg-02b9e8a467c7bd07d",
            "description": "Allow all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02b9e8a467c7bd07d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "me-south-1-sg",
            "name_prefix": null,
            "owner_id": "627588749323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "me-south-1-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0020c369"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sa-east-1",
      "provider": "provider.aws.sa-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:627588749323:security-group/sg-0f8227b4b3dbd7141",
            "description": "Allow all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f8227b4b3dbd7141",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sa-east-1-sg",
            "name_prefix": null,
            "owner_id": "627588749323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sa-east-1-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-cc353da8"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "us-east-1",
      "provider": "provider.aws.us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:627588749323:security-group/sg-0e04d3ca8417545f2",
            "description": "Allow all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e04d3ca8417545f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "us-east-1-sg",
            "name_prefix": null,
            "owner_id": "627588749323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "us-east-1-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-5f48f43a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "us-east-2",
      "provider": "provider.aws.us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:627588749323:security-group/sg-06fee606af9623779",
            "description": "Allow all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06fee606af9623779",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "us-east-2-sg",
            "name_prefix": null,
            "owner_id": "627588749323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "us-east-2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-d2c6d2bb"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "us-west-1",
      "provider": "provider.aws.us-west-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:627588749323:security-group/sg-059541a4b6ce0592e",
            "description": "Allow all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-059541a4b6ce0592e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "us-west-1-sg",
            "name_prefix": null,
            "owner_id": "627588749323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "us-west-1-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-dcccf7b8"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "us-west-2",
      "provider": "provider.aws.us-west-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627588749323:security-group/sg-0105206355b41f604",
            "description": "Allow all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0105206355b41f604",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "us-west-2-sg",
            "name_prefix": null,
            "owner_id": "627588749323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "us-west-2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-26768d43"
          }
        }
      ]
    }
  ]
}